--- a/client/styles.css
+++ b/client/styles.css
@@ -3,17 +3,36 @@
     font-family: sans-serif;
 }
 
+html {
+    height: 100%;
+}
+
 body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.page-wrapper {
+    width: 100%;
+    height: 100%;
     padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box {
+    padding: 20px;
 }
 
 form {
-    width: 220px;
+    width: 250px;
 }
 
 input {
     width: 100%;
-    height: 26px;
+    height: 30px;
 }
 
 input[type='submit'] {
